fix(backend): resolve /api/pricing/estimate 500 error and places details dummy coordinates